[package]
name = "raytrace-parallel"
version = "0.1.0"
authors = ["laopo001 <353272497@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasm-math = { path="wasm-math" }
rand = "*"
lazy_static="*"
nameof = "1.1"
cgmath="*"
hello_rust = { git = "https://github.com/laopo001/hello_rust.git",rev = "b09992161269335840609a50692ae5bf716f359f"  }